<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Leaf Collector</string>
    <string name="login_phrase">Conecte-se para acessar\nseus Leafs</string>

    <string name="app_slogan">Seja Sustentável\nTroque Sacolas :)</string>
    <string name="shops">Lojas</string>
    <string name="cart_items">Itens do Carrinho</string>

    <string name="exchange_bags">Trocar Sacolas</string>
    <string name="confirm">Confirmar</string>
    <string name="adresses">Endereços</string>
    <string name="add_adresse">Adicionar Endereço</string>
    <string name="cancel">Cancelar</string>
    <string name="put_in_cart">Colocar no Carrinho</string>

    <string name="buy_proof">Comprovante de Compra</string>
    <string name="change_proof">Comprovante de Troca</string>
    <string name="user">Usuário</string>
    <string name="enterpraise">Empresa</string>
    <string name="info_proof">Este comprovante é apenas\numa simulação criada para um\nprojeto de estudo.</string>
    <string name="change_success">Troca Efetuada</string>

    <string name="approach_qrcode">Aproxime o QRCODE</string>
    <string name="image_entry">Imagem de entrada do app</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="register">Cadastrar</string>
    <string name="proof">Comprovante</string>
    <string name="plus">+</string>
    <string name="hello">Olá,</string>
    <string name="unit">Unidade</string>
    <string name="circle_text">•</string>
    <string name="image_of_product">Imagem do produto</string>
    <string name="remove_item_from_cart">Remover item do carrinho</string>
    <string name="leaf_coin">LFS</string>
    <string name="inform_for_user">Informar ao usuário detalhes do app</string>
    <string name="open_cart">Abrir carrinho</string>
    <string name="coin_app">Moeda do app</string>
    <string name="num">Num</string>
    <string name="adress">Endereço</string>
    <string name="complement">Complemento</string>
    <string name="district">Bairro</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="cep">CEP</string>
    <string name="products">Produtos</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="cpf">CPF</string>
    <string name="phone">Telefone</string>
    <string name="add_adress">Adicionar endereço</string>
    <string name="register_user">Registrar usuário</string>
    <string name="get_out" tools:ignore="ExtraTranslation">Sair</string>
    <string name="zero">0</string>
    <string name="change_password">Alterar senha</string>
    <string name="insert_email_for_recuperation">Insira e-mail para recuperação</string>
    <string name="adress_icon">Endereço icone</string>
    <string name="last_name">Sobrenome</string>
    <string name="description">Descrição</string>
    <string name="total">Total</string>
    <string name="buy">Comprar</string>
    <string name="_1">1</string>
    <string name="street">Rua</string>
</resources>