<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    tools:context=".ui.product.ProductActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/product_imgcv"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_of_product"
            android:src="@color/green_primary" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:text="@string/products"
        android:textColor="@color/green_secundary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/product_imgcv"
        app:layout_constraintTop_toBottomOf="@+id/product_imgcv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/product_name"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <ImageView
        android:id="@+id/product_img_leaf"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:contentDescription="@string/proof"
        android:src="@drawable/ic_leaf"
        app:layout_constraintEnd_toStartOf="@+id/product_txt_price"
        app:layout_constraintTop_toTopOf="@+id/product_txt_price"
        app:tint="@color/gray" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/green_secundary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/product_imgcv"
        app:layout_constraintTop_toBottomOf="@+id/product_imgcv"
        tools:text="80" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/product_btn_putincart"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/put_in_cart"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/product_btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/green_primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/product_btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>