<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="36dp"
    android:paddingVertical="8dp">

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:dividerColor="@color/gray"
        app:dividerThickness="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvitem_imgproduct"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_of_product"
            android:src="@color/green_primary" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvitem_productname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:text="@string/shops"
        android:textColor="@color/green_secundary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cvitem_imgproduct"
        app:layout_constraintTop_toTopOf="@+id/cvitem_imgproduct" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvitem_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:text="@string/unit"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/cvitem_imgproduct"
        app:layout_constraintTop_toBottomOf="@+id/tvitem_productname" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvitem_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:maxLines="1"
        android:text="@string/circle_text"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvitem_quantity"
        app:layout_constraintTop_toTopOf="@+id/tvitem_quantity" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvitem_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvitem_circle"
        app:layout_constraintTop_toTopOf="@+id/tvitem_circle"
        tools:text="800" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:maxLines="1"
        android:text="@string/leaf_coin"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvitem_price"
        app:layout_constraintTop_toTopOf="@+id/tvitem_price" />

    <ImageView
        android:id="@+id/imgitem_removefromcart"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/remove_item_from_cart"
        android:src="@drawable/ic_remove_shopping_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green_primary" />


</androidx.constraintlayout.widget.ConstraintLayout>