<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="36dp"
    android:layout_height="match_parent"
    tools:context=".ui.user.view.AdressActivity">

    <TextView
        android:id="@+id/adress_txt_adresses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adresses"
        android:gravity="center"
        android:textColor="@color/green_secundary"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adress_ll_adress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:boxStrokeColor="@color/green_primary"
        android:hint="@string/street"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintTop_toTopOf="@+id/adress_txt_adresses"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adress_edt_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/green_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adress_ll_num"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/num"
        app:boxStrokeColor="@color/green_primary"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintStart_toStartOf="@+id/adress_ll_adress"
        app:layout_constraintTop_toBottomOf="@+id/adress_ll_adress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adress_edt_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/green_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adress_ll_complement"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/complement"
        app:boxStrokeColor="@color/green_primary"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintEnd_toEndOf="@+id/adress_ll_adress"
        app:layout_constraintStart_toEndOf="@+id/adress_ll_num"
        app:layout_constraintTop_toBottomOf="@+id/adress_ll_adress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adress_edt_complement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/green_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adress_ll_district"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/green_primary"
        android:hint="@string/district"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintStart_toStartOf="@+id/adress_ll_num"
        app:layout_constraintTop_toBottomOf="@+id/adress_ll_num">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adress_edt_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/green_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adress_ll_city"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/green_primary"
        android:hint="@string/city"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintStart_toStartOf="@+id/adress_ll_district"
        app:layout_constraintTop_toBottomOf="@+id/adress_ll_district">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adress_edt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/green_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adress_ll_state"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/state"
        app:boxStrokeColor="@color/green_primary"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintEnd_toEndOf="@+id/adress_ll_district"
        app:layout_constraintStart_toEndOf="@+id/adress_ll_city"
        app:layout_constraintTop_toBottomOf="@id/adress_ll_district">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adress_edt_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/green_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adress_ll_cep"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/cep"
        app:boxStrokeColor="@color/green_primary"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintStart_toStartOf="@+id/adress_ll_city"
        app:layout_constraintTop_toBottomOf="@+id/adress_ll_city">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adress_edt_cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/green_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/adress_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="36dp"
        android:backgroundTint="@color/green_primary"
        android:text="@string/confirm"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>