<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="42dp"
    tools:context=".ui.UserInfoActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_user"
        android:textColor="@color/green_secundary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_ll_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/register_txt_user"
        app:boxStrokeColor="@color/green_primary"
        app:hintTextColor="@color/green_primary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green_primary"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tl_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:boxStrokeColor="@color/green_primary"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintTop_toBottomOf="@+id/register_ll_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tl_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxStrokeColor="@color/green_primary"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintTop_toBottomOf="@+id/register_tl_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_ll_cpf"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf"
        app:boxStrokeColor="@color/green_primary"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintTop_toBottomOf="@+id/register_tl_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edt_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green_primary"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_ll_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        app:boxStrokeColor="@color/green_primary"
        app:hintTextColor="@color/green_primary"
        app:layout_constraintTop_toBottomOf="@+id/register_ll_cpf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="36dp" />

</androidx.constraintlayout.widget.ConstraintLayout>